# biostream-sentinel

./: .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-pipeline.yml
infra/: .env.example  docker-compose.yml
infra/postgres/: init.sql
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/v1/: analytics.py  assistant.py  ingestion.py
src/backend/app/core/: config.py  logging.py
src/backend/app/domain/: schemas.py
src/backend/app/services/: context.py  detector.py  report.py  storage.py
src/backend/tests/: conftest.py  test_api.py
src/frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/frontend/src/: index.css
src/frontend/src/components/: ChatAssistant.tsx  Dashboard.tsx
src/frontend/src/components/__tests__/: Dashboard.test.tsx
src/simulator/: Dockerfile  generator.go  go.mod  main.go
