[project]
name = "biostream-sentinel-backend"
version = "0.1.0"
description = "MedTech IoT pipeline with anomaly detection"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "polars>=1.9.0",
    "scikit-learn>=1.5.0",
    "asyncpg>=0.29.0",
    "minio>=7.2.0",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    "openai>=1.12.0",
    "reportlab>=4.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- ADDED SECTION BELOW ---
[tool.hatch.build.targets.wheel]
packages = ["app"]
# ---------------------------

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
asyncio_mode = "auto"